CPP14 Step4 Completed

--- a/cpp14/CMakeLists.txt
+++ b/cpp14/CMakeLists.txt
@@ -36,9 +36,10 @@ set(SOURCE_FILES
         src/util/helpers.cpp src/util/helpers.h
         src/util/either.cpp src/util/either.h
         src/ast/internal.cpp src/ast/internal.h
-        src/runtime/environment.cpp src/runtime/environment.h src/runtime/helpers.h)
+        src/runtime/environment.cpp src/runtime/environment.h src/runtime/helpers.h src/runtime/core.cpp src/runtime/core.h)
 
 add_executable(step0_repl ${SOURCE_FILES} ${LIBRARY_FILES} src/step0_repl.cpp)
 add_executable(step1_read_print ${SOURCE_FILES} ${LIBRARY_FILES} src/step1_read_print.cpp)
 add_executable(step2_eval ${SOURCE_FILES} ${LIBRARY_FILES} src/step2_eval.cpp)
 add_executable(step3_env ${SOURCE_FILES} ${LIBRARY_FILES} src/step3_env.cpp)
+add_executable(step4_if_fn_do ${SOURCE_FILES} ${LIBRARY_FILES} src/step4_if_fn_do.cpp)
